# BMSTU-OOP

./: README.md
lab_01/: CMakeLists.txt  Edge.cpp  Edge.h  ErrorType.cpp  ErrorType.h  FrameModel.cpp  FrameModel.h  LibScene.cpp  LibScene.h  Point.cpp  Point.h  Request.cpp  Request.h  RequestTypes.h  argtypes.h  cube.txt  draw.cpp  draw.h  erorrs.cpp  erorrs.h  input.txt  io.cpp  io.h  lab_01.pro  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  model_io.cpp  model_io.h  point.cpp  point.h  request.cpp  request.h  transform.cpp  transform.h  (+2 more)
lab_02/: AVector.h  AVector.hpp  AVectorIter.h  AVectorIter.hpp  BaseVector.h  BaseVectorIter.h  CMakeLists.txt  ConstAVectorIter.h  ConstAVectorIter.hpp  Error.cpp  Error.h  main.cpp
lab_03/lab_03/: CMakeLists.txt  lab_03.pro  main.cpp
lab_03/lab_03/camera/: Camera.cpp  Camera.h
lab_03/lab_03/commands/: BaseCommand.h  Commands.cpp  Commands.h
lab_03/lab_03/creators/: CommandCreators.cpp  CommandCreators.h  Creator.h  FabricCreator.h  QtToolCreators.cpp  QtToolCreators.h  VisitorCreators.cpp  VisitorCreators.h
lab_03/lab_03/draw/: DrawTools.h  Drawer.cpp  Drawer.h  QtDrawTools.cpp  QtDrawTools.h
lab_03/lab_03/managers/: Managers.cpp  Managers.h
lab_03/lab_03/model/: Model.cpp  Model.h  primitives.cpp  primitives.h
lab_03/lab_03/objects/: CompositeObject.cpp  CompositeObject.h  InvisibleObject.h  Objects.cpp  Objects.h  SceneObjects.h  VisibleObjects.h
lab_03/lab_03/qt_files/: mainwindow.cpp  mainwindow.ui
lab_03/lab_03/scene/: BaseScene.h  Scene.cpp  Scene.h  SceneInterface.cpp  SceneInterface.h
lab_03/lab_03/solution/: BuilderSolution.cpp  BuilderSolution.h  DirectorSolution.cpp  DirectorSolution.h  FabricSolution.cpp  FabricSolution.h
lab_03/lab_03/visitor/: DrawVisitor.cpp  DrawVisitor.h  ObjectVisitor.h  TransformVisitor.cpp  TransformVisitor.h
lab_04/lab_04/: CMakeLists.txt  Cabin.cpp  Cabin.h  Controller.cpp  Controller.h  Doors.cpp  Doors.h  Elevator.cpp  Elevator.h  lab_04.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_05/: lab_05.drawio
